# comfyui-subfolderimageloader

./: .gitignore  LICENSE  README.md  __init__.py  fixsubfolder.patch  pyproject.toml  subfolder_loader.py
utils/: file_helpers.py
web/js/: subfolder_image_loader.js
